--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<p><i>Человек, пытающийся сделать домашнее задание по КИЛИ</i></p> 
 	                </div>
 					<div class="col-md-4">
-        	            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Petrus_Christus_-_Portrait_of_a_Young_Woman_-_Google_Art_Project.jpg/368px-Petrus_Christus_-_Portrait_of_a_Young_Woman_-_Google_Art_Project.jpg" title="Petrus Christus - Portrait of a Young Woman - Google Art Project.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
+        	            <img src="https://user-images.githubusercontent.com/42929408/45284528-81a11f80-b4e9-11e8-87d2-73f02315970a.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
 					</div>
 	            </div>
 			</div>
