--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</nav> 
 			</div>
 		</nav>
-		<header style="background-color:Lavender; padding-top:70px; "> 
+		<header style="background-color:LightSkyBlue; padding-top:70px; "> 
 			<div class="container"> 
 				<div class="row">
 					<div class="col-md-4">
@@ -51,13 +51,17 @@
 					</article>
 					<article>
 						<h3>Школа</h3>
-						<p>ГБОУ "Многопрофильная Школа № 1537 "Информационные технологии"</p>
+						<p>ГБОУ "Многопрофильная Школа №1537 "Информационные технологии"</p>
 					</article>
 				</div>
 				<div class="col-md-6">
 					<article>
 						<h3>Мои увлечения:</h3>
 						<p>Танцы, катание на сноуборде, участие в забегах на большие дистанции</p>
+					</article>
+					<article>
+						<h3>Любимые музыкальные жанры</h3>
+						<p>Hip-hop, electro, cloud rap, grime, trill, alternative rock, pop</p>
 					</article>
 				</div>
 				<div class="col-md-3">
