--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 				<div class="col-md-6">
 					<article>
-						<h3>Мои увлечения:</h3>
+						<h3>Мои увлечения</h3>
 						<p>Танцы, катание на сноуборде, участие в забегах на большие дистанции</p>
 					</article>
 					<article>
@@ -67,6 +67,9 @@
 				<div class="col-md-3">
 					<h3>Я в соцсетях</h3>
 					<ul>
+						<div class="col-md-4">
+        	            <img src="https://user-images.githubusercontent.com/42929408/45321141-328cd600-b54d-11e8-9bb3-1a4a3e09da12.png" alt="" style="height:20px; margin:5px 5px 10px 5px; " >
+					</div>
 						<li><a href="https://vk.com/kate_grin">VK</a></li>
 						<li><a href="https://www.instagram.com/kusyakuu/?hl=ru">Instagram</a></li>
 					</ul>
