--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
 					<h3>Я в соцсетях</h3>
 					<ul>
 						<div class="col-md-4">
-        	            <img src="https://user-images.githubusercontent.com/42929408/45321141-328cd600-b54d-11e8-9bb3-1a4a3e09da12.png" alt="" style="height:30px; margin:5px 10px 5px 5px; " >
+        	            <img src="https://user-images.githubusercontent.com/42929408/45321141-328cd600-b54d-11e8-9bb3-1a4a3e09da12.png" alt="" style="height:30px; margin:5px 5px 5px 5px; " >
 					</div>
-						<li><a href="https://vk.com/kate_grin">VK</a></li>
-						<li><a href="https://www.instagram.com/kusyakuu/?hl=ru">Instagram</a></li>
+						<p><li><a href="https://vk.com/kate_grin">VK</a></li></p>
+				                <div class="col-md-4">
+        	            <img src="https://user-images.githubusercontent.com/42929408/45321721-c57a4000-b54e-11e8-95e5-3131f0fa2ab0.jpg" alt="" style="height:30px; margin:5px 5px 5px 5px; " >
+						</div>
+						<p><li><a href="https://www.instagram.com/kusyakuu/?hl=ru">Instagram</a></li></p>
 					</ul>
 				</div>
 			</div>
