--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 					        </div>
 						<p><li><a href="https://vk.com/kate_grin">VK</a></li></p>
 				                <div class="col-md-4">
-        	            <img src="https://user-images.githubusercontent.com/42929408/45321721-c57a4000-b54e-11e8-95e5-3131f0fa2ab0.jpg" alt="" style="height:30px; margin:5px 5px 5px 0px; " >
+        	            <img src="https://user-images.githubusercontent.com/42929408/45321721-c57a4000-b54e-11e8-95e5-3131f0fa2ab0.jpg" alt="" style="height:30px; margin:5px 5px 5px 5px; " >
 						</div>
-						<p><li><a href="https://www.instagram.com/kusyakuu/?hl=ru">Instagram</a></li></p>
+						<li><a href="https://www.instagram.com/kusyakuu/?hl=ru">Instagram</a></li>
 					</ul>
 				</div>
 			</div>
