--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
 						<div class="col-md-3">
         	            <img src="https://user-images.githubusercontent.com/42929408/45321141-328cd600-b54d-11e8-9bb3-1a4a3e09da12.png" alt="" style="height:40px; margin:5px 5px 5px 5px; " >
 		            <img src="https://user-images.githubusercontent.com/42929408/45321721-c57a4000-b54e-11e8-95e5-3131f0fa2ab0.jpg" alt="" style="height:30px; margin:5px 5px 5px 5px; " >
-		            <li><a href="https://vk.com/kate_grin">VK</a></li>
+                                                </div>
+						<div class="col-md-4">
+			    <li><a href="https://vk.com/kate_grin">VK</a></li>
 			    <li><a href="https://www.instagram.com/kusyakuu/?hl=ru">Instagram</a></li>
-						</div>
+					        </div>
 					</ul>
 				</div>
 			</div>
