--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                          </div>
 						<div class="col-md-4">
 							<p><li><a href="https://vk.com/kate_grin">VK</a></li></p><br>
-							<li><a href="https://www.instagram.com/kusyakuu/?hl=ru">Instagram</a></li>
+							<p><li><a href="https://www.instagram.com/kusyakuu/?hl=ru">Instagram</a></li></p>
 					        </div>
 				</div>
 			</div>
