--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		            <img src="https://user-images.githubusercontent.com/42929408/45321721-c57a4000-b54e-11e8-95e5-3131f0fa2ab0.jpg" alt="" style="height:30px; margin:5px 5px 5px 5px; " >
                                          </div>
 						<div class="col-md-4">
-							<p><li><a href="https://vk.com/kate_grin">VK</a></li></p><br>
+							<p><li><a href="https://vk.com/kate_grin">VK</a></li></p>
 							<p><li><a href="https://www.instagram.com/kusyakuu/?hl=ru">Instagram</a></li></p>
 					        </div>
 				</div>
