--- a/index.html
+++ b/index.html
@@ -67,11 +67,10 @@
 				<div class="col-md-3">
 					<h3>Я в соцсетях</h3>
 					 <div class="col-md-3">
-        	            <img src="https://user-images.githubusercontent.com/42929408/45321141-328cd600-b54d-11e8-9bb3-1a4a3e09da12.png" alt="" style="height:40px; margin:5px 10px 5px 0px; " >
+        	            <a href="https://vk.com/kate_grin"><img src="https://user-images.githubusercontent.com/42929408/45321141-328cd600-b54d-11e8-9bb3-1a4a3e09da12.png" alt="" style="height:40px; margin:5px 10px 5px 0px; " ></a>
 		            <img src="https://user-images.githubusercontent.com/42929408/45321721-c57a4000-b54e-11e8-95e5-3131f0fa2ab0.jpg" alt="" style="height:30px; margin:5px 5px 5px 5px; " >
                                          </div>
 						<div class="col-md-4">
-							<p><li><a href="https://vk.com/kate_grin">VK</a></li></p>
 							<p><li><a href="https://www.instagram.com/kusyakuu/?hl=ru">Instagram</a></li></p>
 					        </div>
 				</div>
