--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			</div>
 		</header>
 		<section id="portfolio">
+		    <header style="background-color:LightYellow; padding-top:50px; "> 
 			<div class="container">
 				<div class="col-md-3">
 					<article>
