--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 			</div>
 		</header>
 		<section id="portfolio">
-		    <header style="background-color:LightYellow; padding-top:50px; "> 
+		    <div style="backgroung-color: Fuchsia; padding-top^50px; " >
+			</div> 
 			<div class="container">
 				<div class="col-md-3">
 					<article>
