--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
 					 <div class="col-md-4">
 			    <a href="https://www.instagram.com/kusyakuu/?hl=ru"><img src="https://user-images.githubusercontent.com/42929408/45321721-c57a4000-b54e-11e8-95e5-3131f0fa2ab0.jpg" alt="" style="height:43px; margin:10px 5px 5px 5px; " ></a>
                                          </div>
+					 <div class="col-md-5">
+			    <a href="https://t.me/kusyakuu"><img src="https://user-images.githubusercontent.com/42929408/45425418-f8811880-b6a1-11e8-8b7c-2811abf217ef.jpg" alt="" style="height:50px; margin:10px 5px 5px 5px; " ></a>
+                                         </div>
 				</div>
 			</div>
 		</section>
