--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</div>
 		</header>
 		<section id="portfolio">
-		    <div style="backgroung-color: Fuchsia; padding-top^50px; " >
+		    <div style="backgroung-color: Fuchsia; padding-top:50px; " >
 			</div> 
 			<div class="container">
 				<div class="col-md-3">
@@ -72,7 +72,7 @@
         	            <a href="https://vk.com/kate_grin"><img src="https://user-images.githubusercontent.com/42929408/45321141-328cd600-b54d-11e8-9bb3-1a4a3e09da12.png" alt="" style="height:50px; margin:5px 10px 5px 0px; " ></a>
 		                         </div>
 					 <div class="col-md-4">
-			    <a href="https://www.instagram.com/kusyakuu/?hl=ru"><img src="https://user-images.githubusercontent.com/42929408/45321721-c57a4000-b54e-11e8-95e5-3131f0fa2ab0.jpg" alt="" style="height:43px; margin:10px 0px 5px 5px; " ></a>
+			    <a href="https://www.instagram.com/kusyakuu/?hl=ru"><img src="https://user-images.githubusercontent.com/42929408/45321721-c57a4000-b54e-11e8-95e5-3131f0fa2ab0.jpg" alt="" style="height:43px; margin:10px 0px 5px 10px; " ></a>
                                          </div>
 					 <div class="col-md-5">
 			    <a href="https://t-do.ru/kusyakuu"><img src="https://user-images.githubusercontent.com/42929408/45426165-24050280-b6a4-11e8-84b8-74fcce1de2b8.png" alt="" style="height:55px; margin:5px 5px 5px 0px; " ></a>
