--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 	            </div>
 			</div>
 		</header>
+		<style>
+			portfolio {
+				background-color: maroon;
+			}
+		</style>	
 		<section id="portfolio">
-		    <div style="backgroung-color: Fuchsia; padding-top:50px; " >
-			</div> 
 			<div class="container">
 				<div class="col-md-3">
 					<article>
