--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<br/><br/>
-						<h1>Катя Гриневская</h1>
+						<h1>Эщкере</h1>
 						<hr>
 						<p><i>Человек, пытающийся сделать домашнее задание по КИЛИ</i></p> 
 	                </div>
