--- a/index.html
+++ b/index.html
@@ -37,13 +37,8 @@
 					</div>
 	            </div>
 			</div>
-		</header>
-		<style>
-			portfolio {
-				background-color: maroon;
-			}
-		</style>	
-		<section id="portfolio">
+		</header>	
+		<section id="portfolio" style="background-color:LightSkyBlue">
 			<div class="container">
 				<div class="col-md-3">
 					<article>
