--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 				<div class="row">
 					<div class="col-md-4">
 						<br/><br/>
-						<h1>Эщкере</h1>
+						<h1>Катя Гриневская</h1>
 						<hr>
 						<p><i>Человек, пытающийся сделать домашнее задание по КИЛИ</i></p> 
 	                </div>
 					<div class="col-md-4">
-        	            <img src="https://user-images.githubusercontent.com/42929408/45319885-c492df80-b549-11e8-93af-7f1d8d66c607.jpg" alt="" style="height:400px; margin:20px 20px 40px 20px; " >
+        	            <img src="https://user-images.githubusercontent.com/42929408/45319885-c492df80-b549-11e8-93af-7f1d8d66c607.jpg" alt="my photo" style="height:400px; margin:20px 20px 40px 20px; " >
 					</div>
 	            </div>
 			</div>
@@ -57,30 +57,33 @@
 				<div class="col-md-6">
 					<article>
 						<h3>Мои увлечения</h3>
-						<p>Танцы, катание на сноуборде, участие в забегах на большие дистанции</p>
+						<p>Танцы, катание на сноуборде, участие в <b>забегах</b> на большие дистанции</p>
 					</article>
 					<article>
 						<h3>Любимые музыкальные жанры</h3>
 						<p>Hip-hop, electro, cloud rap, grime, trill, alternative rock, pop</p>
 					</article>
+					<article>
+						<img src="https://s13.stc.all.kpcdn.net/share/i/12/9656637/inx960x640.jpg" style="height:100px" >
+					</article>
 				</div>
 				<div class="col-md-3">
 					<h3>Я в соцсетях</h3>
 					 <div class="col-md-3">
-        	            <a href="https://vk.com/kate_grin"><img src="https://user-images.githubusercontent.com/42929408/45321141-328cd600-b54d-11e8-9bb3-1a4a3e09da12.png" alt="" style="height:50px; margin:5px 10px 5px 0px; " ></a>
+        	            <a href="https://vk.com/kate_grin"><img src="https://user-images.githubusercontent.com/42929408/45546544-4b83d880-b826-11e8-9791-9a4b742ad501.png" alt="" style="height:73px; margin:8px 10px 50px 0px; " ></a>
 		                         </div>
 					 <div class="col-md-4">
-			    <a href="https://www.instagram.com/kusyakuu/?hl=ru"><img src="https://user-images.githubusercontent.com/42929408/45321721-c57a4000-b54e-11e8-95e5-3131f0fa2ab0.jpg" alt="" style="height:43px; margin:10px 0px 5px 10px; " ></a>
+			    <a href="https://www.instagram.com/kusyakuu/?hl=ru"><img src="https://user-images.githubusercontent.com/42929408/45547076-314afa00-b828-11e8-9c55-4b27a59bafe7.png" alt="" style="height:50px; margin:20px 5px 5px 20px; " ></a>
                                          </div>
 					 <div class="col-md-5">
-			    <a href="https://t-do.ru/kusyakuu"><img src="https://user-images.githubusercontent.com/42929408/45426165-24050280-b6a4-11e8-84b8-74fcce1de2b8.png" alt="" style="height:55px; margin:5px 5px 5px 0px; " ></a>
+			    <a href="https://t-do.ru/kusyakuu"><img src="https://user-images.githubusercontent.com/42929408/45426165-24050280-b6a4-11e8-84b8-74fcce1de2b8.png" alt="" style="height:55px; margin:15px 5px 5px 0px; " ></a>
                                          </div>
 				</div>
 			</div>
 		</section>
-		<footer class="bs-docs-footer"> 
+		<footer class="bs-docs-footer" style="background-color:Fuchsia"> 
 			<div class="container"> 
-				<p style="text-align:right; ">&copy; К. Гриневская, 2018</p> 
+				<p style="text-align:right;">&copy; К. Гриневская, 2018</p> 
 			</div>
 		</footer>
 	</body>
