--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
-		<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
+		<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom" style="background-color:MediumSpringGreen; >
 			<div class="container"> 
 				<div class="navbar-header"> 
 					<a href="https://ling.hse.ru/" class="navbar-brand">Школа лингвистики НИУ ВШЭ</a> 
@@ -23,7 +23,7 @@
 				</nav> 
 			</div>
 		</nav>
-		<header style="background-color:LightSkyBlue; padding-top:70px; "> 
+		<header style="background-color:Pink; padding-top:70px; "> 
 			<div class="container"> 
 				<div class="row">
 					<div class="col-md-4">
@@ -33,12 +33,12 @@
 						<p><i>Человек, пытающийся сделать домашнее задание по КИЛИ</i></p> 
 	                </div>
 					<div class="col-md-4">
-        	            <img src="https://user-images.githubusercontent.com/42929408/45319885-c492df80-b549-11e8-93af-7f1d8d66c607.jpg" alt="my photo" style="height:400px; margin:20px 20px 40px 20px; " >
+        	            <img src="https://user-images.githubusercontent.com/42929408/45319885-c492df80-b549-11e8-93af-7f1d8d66c607.jpg" alt="my photo" style="height:400px; margin:20px 20px 45px 20px; " >
 					</div>
 	            </div>
 			</div>
 		</header>	
-		<section id="portfolio" style="background-color:LightSkyBlue">
+		<section id="portfolio" style="background-color:MediumSpringGreen">
 			<div class="container">
 				<div class="col-md-3">
 					<article>
@@ -57,14 +57,14 @@
 				<div class="col-md-6">
 					<article>
 						<h3>Мои увлечения</h3>
-						<p>Танцы, катание на сноуборде, участие в <b>забегах</b> на большие дистанции</p>
+						<p>Танцы, катание на сноуборде, участие в забегах на большие дистанции</p>
 					</article>
 					<article>
 						<h3>Любимые музыкальные жанры</h3>
 						<p>Hip-hop, electro, cloud rap, grime, trill, alternative rock, pop</p>
 					</article>
 					<article>
-						<img src="https://s13.stc.all.kpcdn.net/share/i/12/9656637/inx960x640.jpg" style="height:100px" >
+						<img src="https://78.media.tumblr.com/6e55f45cff74e322c621ad1a2926fbbd/tumblr_o4ogj8Nbtv1u2yfqbo1_500.gif" style="height:170px" >
 					</article>
 				</div>
 				<div class="col-md-3">
@@ -81,7 +81,7 @@
 				</div>
 			</div>
 		</section>
-		<footer class="bs-docs-footer" style="background-color:Fuchsia"> 
+		<footer class="bs-docs-footer" style="background-color:MediumSpringGreen; "> 
 			<div class="container"> 
 				<p style="text-align:right;">&copy; К. Гриневская, 2018</p> 
 			</div>
