--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
-		<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom" style="background-color:Azure; >
+		<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom" style="background-color:Azure" >
 			<div class="container"> 
 				<div class="navbar-header"> 
 					<a href="https://ling.hse.ru/" class="navbar-brand">Школа лингвистики НИУ ВШЭ</a> 
@@ -29,7 +29,7 @@
 					<div class="col-md-4">
 						<br/><br/>
 						<h1>Катя Гриневская</h1>
-						<hr>
+						<hr style="background-color:MediumSpringGreen; height:3px; " >
 						<p><i>Человек, пытающийся сделать домашнее задание по КИЛИ</i></p> 
 	                </div>
 					<div class="col-md-4">
