--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<br/><br/>
 						<h1>Катя Гриневская</h1>
 						<hr style="background-color:MediumSpringGreen; height:3px; " >
-						<p><i>Человек, пытающийся сделать домашнее задание по КИЛИ</i></p> 
+						<p><i><font size="4">Человек, пытающийся сделать домашнее задание по КИЛИ</font></i></p> 
 	                </div>
 					<div class="col-md-4">
         	            <img src="https://user-images.githubusercontent.com/42929408/45319885-c492df80-b549-11e8-93af-7f1d8d66c607.jpg" alt="my photo" style="height:400px; margin:20px 20px 45px 20px; " >
@@ -51,7 +51,7 @@
 					</article>
 					<article>
 						<h3>Школа</h3>
-						<p>ГБОУ "Многопрофильная Школа №1537 "Информационные технологии"</p>
+						<p>ГБОУ "Многопрофильная Школа №1537 "<i>Информационные технологии</i>"</p>
 					</article>
 				</div>
 				<div class="col-md-6">
