--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				</div>
 			</div>
 		</section>
-		<footer class="bs-docs-footer" style="background-color:MediumSpringGreen; "> 
+		<footer class="bs-docs-footer" style="background-color:Azure; "> 
 			<div class="container"> 
 				<p style="text-align:right;">&copy; К. Гриневская, 2018</p> 
 			</div>
