--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
 						<h3>Школа</h3>
 						<p>ГБОУ "Многопрофильная Школа №1537 "<i>Информационные технологии</i>"</p>
 					</article>
+					<article>
+						<h3>Дата рождения</h3>
+						<p>14 марта 2001 года</p>
+					</article>
 				</div>
 				<div class="col-md-6">
 					<article>
