--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<div class="col-md-6">
 					<article>
 						<h3>Мои увлечения</h3>
-						<p>Танцы, катание на сноуборде, участие в забегах на большие дистанции</p>
+						<p>Танцы, катание на сноуборде, участие в забегах на большие дистанции, игра на гитаре</p>
 					</article>
 					<article>
 						<h3>Любимые музыкальные жанры</h3>
